--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="/list.png">
   <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <meta property="og:image" content="images/TO-DO-LIST.png">
   <!-- <meta name="description" content="Web site created using create-react-app" /> -->
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-  <link rel="icon" href="images/list.png">
+  
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Lista zadań w React.js</title>
+  <title>Lista zadań w React</title>
   
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
