--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="/list.png">
-  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <meta property="og:image" content="images/TO-DO-LIST.png">
-  <!-- <meta name="description" content="Web site created using create-react-app" /> -->
-  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-  
+  <meta name="description" content="Lista zadań pozwoli ci lepiej zaplanować dzień." />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
