--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/list.png">
-  <meta property="og:image" content="images/TO-DO-LIST.png">
+  <link rel="icon" href="%PUBLIC_URL%/list.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta property="og:image" content="%PUBLIC_URL%/TO-DO-LIST.png" />
   <meta name="description" content="Lista zadań pozwoli ci lepiej zaplanować dzień." />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+  
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,8 +24,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Lista zadań w React</title>
-  
-  
+
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
